@@ -8,6 +8,7 @@ import org.springframework.core.type.AnnotationMetadata;
  * @description
  * @date 2022/6/20 14:19
  */
+@Deprecated
 public class RequestLogRegistrar implements ImportSelector {
 
     @Override
