@@ -64,12 +64,6 @@
             <artifactId>spring-cloud-context</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.spring4all</groupId>-->
-<!--            <artifactId>swagger-spring-boot-starter</artifactId>-->
-<!--            <version>1.9.1.RELEASE</version>-->
-<!--        </dependency>-->
-
     </dependencies>
 
 
